# Jarvis

./: .env.example  .gitignore  CLAUDE.md  README.md  jarvis_fupan.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/fupan/: SKILL.md
.claude/skills/initi-cc/: SKILL.md
ImplementationPlan/: README.md
ImplementationPlan/backend/: plan.md
ImplementationPlan/frontend/: plan.md
ImplementationPlan/general/: architecture.md  task.md
backend/: config.py  main.py  state.py
backend/agent/: jarvis_agent.py
backend/agent/tools/: browser.py  datetime_tool.py  search.py
backend/agent_data/memories/: AGENTS.md
backend/api/: routes.py  websocket.py
backend/audio/: listener.py  speaker.py  wake_word.py
backend/db/: database.py  models.py
backend/prompts/: goodbye.txt  greeting.txt  system.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ConversationLog.tsx  LeftPanel.tsx  ResultCard.tsx  RightPanel.tsx  SphereCanvas.tsx  StatusBadge.tsx  WaveformCanvas.tsx
frontend/src/context/: JarvisContext.tsx
frontend/src/hooks/: useMouseActivity.ts  useWebSocket.ts
frontend/src/tests/: reducer.test.ts  useWebSocket.test.ts
tests/: test_agent.py  test_routes.py  test_state.py  test_tools.py  test_websocket.py
