[project]
name = "jarvis"
version = "0.1.0"
description = "Wake-word-activated personal voice AI assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pvporcupine",
    "pvrecorder",
    "openai-whisper",
    "edge-tts",
    "sounddevice",
    "numpy",
    "deepagents",
    "langgraph",
    "langchain-google-genai",
    "tavily-python",
    "sqlalchemy",
    "python-dotenv",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]
