[project]
name = "jarvis"
version = "0.1.0"
description = "Wake-word-activated personal voice AI assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pvporcupine",
    "pvrecorder",
    "openai-whisper>=20250625",
    "edge-tts",
    "sounddevice",
    "numpy",
    "setuptools",
    "deepagents",
    "langgraph",
    "langchain-google-genai",
    "tavily-python",
    "sqlalchemy",
    "python-dotenv",
    "websockets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
# openai-whisper ships only as an sdist; its setup.py needs setuptools at build
# time. numba>=0.61 is required for Python >=3.11 support.
override-dependencies = ["numba>=0.61"]

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools<72"]

